--- a/VR-Touch-PC.vcxproj.filters
+++ b/VR-Touch-PC.vcxproj.filters
@@ -39,6 +39,12 @@
     <ClCompile Include="FakeRocker.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="MotorManager.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="DtmMap.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Socket.h">
@@ -72,6 +78,12 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="FakeRocker.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="MotorManager.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="DtmMap.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
