--- a/VR-Touch-PC.vcxproj
+++ b/VR-Touch-PC.vcxproj
@@ -128,8 +128,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Config.cpp" />
+    <ClCompile Include="DtmMap.cpp" />
     <ClCompile Include="FakeRocker.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="MotorManager.cpp" />
     <ClCompile Include="Socket.cpp" />
     <ClCompile Include="Stream.cpp" />
     <ClCompile Include="Thread.cpp" />
@@ -139,7 +141,9 @@
   <ItemGroup>
     <ClInclude Include="AutoPtr.h" />
     <ClInclude Include="Config.h" />
+    <ClInclude Include="DtmMap.h" />
     <ClInclude Include="FakeRocker.h" />
+    <ClInclude Include="MotorManager.h" />
     <ClInclude Include="NoneCopyAble.h" />
     <ClInclude Include="Package.h" />
     <ClInclude Include="Singleton.h" />
